- update: master - update background colors, change loret itsum text for real descriptions

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </div>
     </main>
     <footer class="footer">
-        <p class="footer__text">Copyright &copy; 2021. Todos los derechos reservados. <a href="https://twitter.com/mmmarrtha" target="_blank">Martha Nieto.</a></p> 
+        <p class="footer__text">Copyright &copy; 2021. Todos los derechos reservados. <a href="https://my-portfolio-smoky-ten-88.vercel.app" target="_blank">Martha M. Nieto</a></p> 
     </footer>
 </body>
 </html>
