--- a/nosotros.html
+++ b/nosotros.html
@@ -24,8 +24,8 @@
 
         <div class="nosotros">
             <div class="nosotros__contenido">
-                <p>Cras facilisis ligula eu nulla vestibulum, vel pellentesque est efficitur. Proin quis sem justo. Maecenas placerat mauris at lorem condimentum porttitor. Duis quis ligula condimentum, scelerisque turpis at, viverra arcu. Nullam ut consectetur nulla. Nunc faucibus pulvinar velit, vitae elementum nisi pretium non. Etiam pulvinar felis non consequat convallis. Quisque ullamcorper risus pharetra erat blandit, eu blandit risus rhoncus. Nulla elementum mollis diam ut tempus. Proin commodo pretium odio. Aliquam interdum dolor sed ornare lacinia. Integer malesuada aliquet fringilla. Fusce consequat laoreet elit sit amet scelerisque.</p>
-                <p>Nulla in dolor tortor. Integer a felis sit amet mauris convallis dictum. Vestibulum placerat lacinia lacus, nec bibendum eros vestibulum ac. Nulla consectetur diam nisi, in porttitor eros pretium vel. Aliquam ut convallis massa, sed placerat neque. Donec sit amet ligula condimentum, luctus sem non, dictum leo. Donec ac ultrices neque. </p>  
+                <p>Front-End Store nació de la pasión de un grupo de desarrolladores que creían que el código no solo debía verse bien en pantalla, sino también en la vida real. Comenzamos creando playeras para nosotros mismos, y pronto nos dimos cuenta de que había toda una comunidad que compartía nuestro amor por React, Vue, Angular y todos los frameworks que hacen posible la web moderna.</p>  
+                <p>Somos desarrolladores, diseñadores y amantes del front-end que entendemos tu workflow, tus frustraciones con los bugs, y la satisfacción de ver tu código funcionar perfectamente. Cada diseño está pensado por developers, para developers, celebrando las herramientas que usamos día a día.</p>
             </div>
             <img class="nosotros__imagen" src="/resources/img/nosotros.jpg" alt="imagen nosotros">
         </div>
@@ -37,22 +37,22 @@
             <div class="bloque">
                 <img class="bloque__imagen" src="/resources/img/icono_1.png" alt="porque comprar">
                 <h3 class="bloque__titulo">El mejor precio</h3>
-            <p>Cras facilisis ligula eu nulla vestibulum, vel pellentesque est efficitur. Proin quis sem justo. Maecenas placerat mauris at lorem condimentum porttitor. Duis quis ligula condimentum, scelerisque turpis at, viverra arcu. Nullam ut consectetur nulla. Nunc faucibus pulvinar velit, vitae elementum nisi pretium non. Etiam pulvinar felis non consequat convallis. Quisque ullamcorper risus pharetra erat blandit, eu blandit risus rhoncus.</p>
+            <p>Ofrecemos precios competitivos y descuentos especiales para clientes recurrentes. Tu satisfacción es nuestra prioridad.</p>
             </div> <!--.bloque-->
             <div class="bloque">
                 <img class="bloque__imagen" src="/resources/img/icono_2.png" alt="porque comprar">
                 <h3 class="bloque__titulo">Para devs</h3>
-            <p>Cras facilisis ligula eu nulla vestibulum, vel pellentesque est efficitur. Proin quis sem justo. Maecenas placerat mauris at lorem condimentum porttitor. Duis quis ligula condimentum, scelerisque turpis at, viverra arcu. Nullam ut consectetur nulla. Nunc faucibus pulvinar velit, vitae elementum nisi pretium non. Etiam pulvinar felis non consequat convallis. Quisque ullamcorper risus pharetra erat blandit, eu blandit risus rhoncus.</p>
+            <p>Creamos playeras de alta calidad con diseños únicos que representan los frameworks y librerías que amamos. Desde React hasta Svelte, desde Vue hasta Angular, cada pieza es una declaración de tu stack tecnológico y tu pasión por crear experiencias web increíbles.</p>
             </div> <!--.bloque-->
             <div class="bloque">
                 <img class="bloque__imagen" src="/resources/img/icono_3.png" alt="porque comprar">
                 <h3 class="bloque__titulo">Envío gratis</h3>
-            <p>Cras facilisis ligula eu nulla vestibulum, vel pellentesque est efficitur. Proin quis sem justo. Maecenas placerat mauris at lorem condimentum porttitor. Duis quis ligula condimentum, scelerisque turpis at, viverra arcu. Nullam ut consectetur nulla. Nunc faucibus pulvinar velit, vitae elementum nisi pretium non. Etiam pulvinar felis non consequat convallis. Quisque ullamcorper risus pharetra erat blandit, eu blandit risus rhoncus.</p>
+            <p>Enviamos gratis a todo el mundo. Cada pedido incluye un seguimiento completo y notificaciones por correo electrónico para que nunca te pierdas tu paquete.</p>
             </div> <!--.bloque-->
             <div class="bloque">
                 <img class="bloque__imagen" src="/resources/img/icono_4.png" alt="porque comprar">
                 <h3 class="bloque__titulo">La mejor calidad</h3>
-            <p>Cras facilisis ligula eu nulla vestibulum, vel pellentesque est efficitur. Proin quis sem justo. Maecenas placerat mauris at lorem condimentum porttitor. Duis quis ligula condimentum, scelerisque turpis at, viverra arcu. Nullam ut consectetur nulla. Nunc faucibus pulvinar velit, vitae elementum nisi pretium non. Etiam pulvinar felis non consequat convallis. Quisque ullamcorper risus pharetra erat blandit, eu blandit risus rhoncus.</p>
+            <p>Utilizamos materiales de primera calidad y técnicas de impresión que garantizan durabilidad y confort de uso. Cada prenda es un detalle que merece ser llevada siempre contigo.</p>
             </div> <!--.bloque-->
         </div> <!--.bloques-->
     </section>
