--- a/producto.html
+++ b/producto.html
@@ -25,16 +25,16 @@
         <div class="tshirt">
             <img src="/resources/img/3.jpg" alt="tshirt">
             <div class="tshirt__content">
-                <p>Etiam non consectetur risus. Nulla facilisi. In id diam vitae dui iaculis ultricies a vitae ante. Etiam condimentum lacus eu dui cursus, sit amet vestibulum nisl viverra. Nam dictum semper augue, at suscipit quam lobortis ac. Cras auctor vel nulla quis rhoncus.</p>
+                <p>Camiseta premium con el logo de tu framework favorito estampado de manera profesional. Fabricada en 100% algodón suave y de alta calidad, ideal para uso diario. Disponible en tallas Chica, Mediana y Grande. El diseño cuenta con un estampado duradero que resiste múltiples lavados sin perder su brillo y color. Perfecta para desarrolladores y amantes del front-end que quieren mostrar su pasión por este framework.</p>
 
                 <form action="" class="formulario">
-                    <select class="formulario__campo" name="" id="">
+                    <select class="formulario__campo" name="size" id="size">
                         <option disabled selected value="">--Seleccionar Talla--</option>
-                        <option value="">Chica</option>
-                        <option value="">Mediana</option>
-                        <option value="">Grande</option>
+                        <option value="chica">Chica</option>
+                        <option value="mediana">Mediana</option>
+                        <option value="grande">Grande</option>
                     </select>
-                    <input class="formulario__campo" type="number" placeholder="Cantidad" min="1">
+                    <input class="formulario__campo" type="number" placeholder="Cantidad" min="1" name="quantity" id="quantity">
                     <input class="formulario__submit" type="submit" value="Agregar al Carrito">
                 </form>
             </div>
